--- a/first trial/style.css
+++ b/first trial/style.css
@@ -3,15 +3,49 @@
     border: 0ch;
 }
 
-.navbar{
-    font-family: 'Montserrat', sans-serif;
-    color: antiquewhite;
-    position: relative;
-    text-align: center;
+html{
+    height: 100;
+    overflow: hidden;
 }
-.navbar h2{
+h1{
+    font-size: 350%;
+    margin-left: 5%;
+    margin-top: 10%;
+    color: rgb(255, 240, 242);
+    position: abs;
+    
+}
+h2{
+    color: whitesmoke;
+    font-size: small;
+    font-weight: 500;
+    margin-left: 5%;
+    letter-spacing: 1.5px;
+}
+
+.topbar{
+    padding-top: 5%;
+    padding-bottom: 40%;
+    background-color: rgb(53, 0, 83);
+    position: relative;
+    text-align: justify;
+    color: aliceblue;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 200;
-    border-bottom: 5px solid darkgray;
-    text-align: center;
+    
+}
+
+#avatar{
+    width: 25%;
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    display: inline-block;
+}
+
+.planets{
+    width: 200px;
+    position: absolute;
+    right: 10%;
+    top: 55%;
+   fill: violet;
 }
